--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/pirfalt/continuable-race/issues"
   },
-  "homepage": "https://github.com/pirfalt/continuable-race"
+  "homepage": "https://github.com/pirfalt/continuable-race",
+  "devDependencies": {
+    "tape": "~2.3.2",
+    "continuable": "~1.1.8"
+  }
 }
